--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -120,7 +120,7 @@
                         <a href="{{ url_for('news.new') }}" class="btn btn-outline-secondary">
                             <i class="bi bi-newspaper me-2"></i>Publicar Noticia
                         </a>
-                        <a href="{{ url_for('admin.dashboard') }}" class="btn btn-outline-dark">
+                        <a href="{{ url_for('admin.index') }}" class="btn btn-outline-dark">
                             <i class="bi bi-gear me-2"></i>Administración
                         </a>
                         {% endif %}
