--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('map') }}">
+                                                    <a class="nav-link" href="{{ url_for('neighborhood_map') }}">
                             <i class="bi bi-geo-alt me-1"></i>Mapa
                         </a>
                     </li>
@@ -101,7 +101,7 @@
                                     <i class="bi bi-person me-2"></i>Perfil
                                 </a></li>
                                 {% if current_user.role == 'admin' %}
-                                <li><a class="dropdown-item" href="{{ url_for('admin.dashboard') }}">
+                                <li><a class="dropdown-item" href="{{ url_for('admin.index') }}">
                                     <i class="bi bi-gear me-2"></i>Administración
                                 </a></li>
                                 {% endif %}
