--- a/templates/visits/index.html
+++ b/templates/visits/index.html
@@ -17,9 +17,7 @@
                 <i class="bi bi-person-plus me-2"></i>Nueva Visita
             </a>
             {% if current_user.role == 'admin' %}
-            <a href="{{ url_for('visits.export') }}" class="btn btn-outline-secondary">
-                <i class="bi bi-download me-2"></i>Exportar
-            </a>
+            <!-- Funcionalidad de exportar pendiente de implementación -->
             {% endif %}
         </div>
     </div>
