--- a/templates/admin/reports.html
+++ b/templates/admin/reports.html
@@ -31,7 +31,7 @@
                     <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#customPeriodModal">Período Personalizado</a></li>
                 </ul>
             </div>
-            <a href="{{ url_for('admin.index') }}" class="btn btn-outline-secondary">
+            <a href="{{ url_for('admin.dashboard') }}" class="btn btn-outline-secondary">
                 <i class="bi bi-arrow-left me-2"></i>Volver al Panel
             </a>
         </div>
