--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">
-                <i class="bi bi-house-door-fill me-2"></i>
-                Portal Barrio
+            <a class="navbar-brand fw-bold d-flex align-items-center" href="{{ url_for('index') }}">
+                <img src="{{ url_for('static', filename='images/tejas4-logo.svg') }}" 
+                     alt="Tejas 4" 
+                     style="height: 35px; width: auto;" 
+                     class="me-2">
+                <span>Tejas 4</span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
