--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -208,9 +208,9 @@
                 <div class="card-body">
                     <div class="row g-3">
                         <div class="col-lg-2 col-md-4 col-sm-6">
-                            <a href="{{ url_for('admin.users') }}" class="btn btn-outline-primary w-100 p-3">
+                            <a href="{{ url_for('user_management.index') }}" class="btn btn-outline-primary w-100 p-3">
                                 <i class="bi bi-people d-block fs-2 mb-2"></i>
-                                Usuarios
+                                Gestión de Usuarios
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-4 col-sm-6">
