--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -284,6 +284,12 @@
                                 <a href="{{ url_for('expense_notifications.index') }}" class="btn btn-warning">
                                     <i class="bi bi-envelope me-2"></i>Notificaciones Expensas
                                 </a>
+                                <a href="{{ url_for('camera_security.index') }}" class="btn btn-danger">
+                                    <i class="bi bi-camera-video me-2"></i>Sistema de Cámaras IA
+                                </a>
+                                <a href="{{ url_for('broadcast_communications.index') }}" class="btn btn-info">
+                                    <i class="bi bi-megaphone me-2"></i>Comunicados Automáticos
+                                </a>
                             </div>
                         </div>
                     </div>
