--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -281,6 +281,9 @@
                                 <a href="{{ url_for('user_management.index') }}" class="btn btn-success">
                                     <i class="bi bi-people me-2"></i>Gestión de Usuarios
                                 </a>
+                                <a href="{{ url_for('expense_notifications.test') }}" class="btn btn-warning">
+                                    <i class="bi bi-bug me-2"></i>Test Notificaciones
+                                </a>
                                 <a href="{{ url_for('expense_notifications.index') }}" class="btn btn-warning">
                                     <i class="bi bi-envelope me-2"></i>Notificaciones Expensas
                                 </a>
